# image2image-reg

./: .github_changelog_generator  .gitignore  CITATION.cff  MANIFEST.in  Makefile  README.md  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
scripts/: importtime.ps1  importtime.sh
src/image2image_reg/: __init__.py  __main__.py  _typing.py  cli.py  constants.py  enums.py  wrapper.py
src/image2image_reg/cli/: __init__.py  _common.py  convert.py  elastix.py  i2reg.py  ims2postaf.py  merge.py  simple_valis.py  valis.py
src/image2image_reg/elastix/: convert.py  figures.py  registration.py  registration_map.py  registration_utils.py  transform.py  transform_sequence.py  transform_utils.py  utilities.py  visuals.py  wsireg.py
src/image2image_reg/models/: __init__.py  bbox.py  export.py  modality.py  paths.py  preprocessing.py  registration.py  transform.py  transform_sequence.py
src/image2image_reg/parameters/: registration.py  transformations.py
src/image2image_reg/preprocessing/: convert.py  mixin.py  step.py  utilities.py  workflow.py
src/image2image_reg/utils/: _platformdirs.py  _test.py  affine.py  config.py  convert.py  preprocessing.py  registration.py  transform.py  transform_utils.py  transformation.py  utilities.py  visuals.py
src/image2image_reg/valis/: detect.py  matcher.py  preprocessing.py  register.py  rigid_registrar.py  slide_io.py  transform.py  utilities.py  valis.py  warp.py
src/image2image_reg/workflows/: __init__.py  _base.py  elastix.py  ims2postaf.py  iwsireg.py  merge.py  transform.py  valis.py
src/image2image_wsireg/: __init__.py  cli.py  enums.py  wrapper.py
src/image2image_wsireg/models/: __init__.py  bbox.py  export.py  modality.py  preprocessing.py  registration.py  transform.py  transform_sequence.py
src/image2image_wsireg/parameters/: registration.py  transformations.py
src/image2image_wsireg/preprocessing/: convert.py  mixin.py  step.py  utilities.py  workflow.py
src/image2image_wsireg/utils/: _test.py  affine.py  convert.py  figures.py  preprocessing.py  registration.py  transformation.py  utilities.py  visuals.py
src/image2image_wsireg/valis/: detect.py  image.py  matcher.py  preprocessing.py  register.py  rigid_registrar.py  slide_io.py  utilities.py  valis.py  warp.py
src/image2image_wsireg/workflows/: __init__.py  iwsireg.py  merge.py  valis.py  wsireg2d.py
tests/: test_cli.py  test_ims2postaf.py  test_models.py  test_pandas_compat.py  test_paths.py  test_preprocessing.py  test_register.py  test_transform_sequence.py  test_valis_utilities.py  test_wrapper.py
tests/_test_data/: complex_linear_reg_transform.json  config.json  ellipse_affine.json  ellipse_mask.tiff  mask_image.tiff  polygon_moving.tiff  polygon_target.tiff  test_transformations.json
