[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# https://peps.python.org/pep-0621/
[project]
name = "image2image-reg"
description = "Whole slide image registration using elastix."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "lukas.migas@yahoo.com", name = "Lukasz G. Migas" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Utilities",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dynamic = ["version"]
dependencies = [
    "koyo>=0.3.1",
    "pydantic>=2",
    "numpy<2",
#    "itk!=5.4.4; platform_system=='MacOS'",
    "itk==5.4.0",
    "itk-elastix==0.19.2",
#    "itk-elastix",
    "opencv-python",
    "SimpleITK",
    "scikit-image",
    "click-groups",
    "mpire",
    "colour-science>=0.4.1",
    "tabulate",
    "loguru",
    "image2image-io>=0.1.13",
    "networkx==3.2.0; python_version < '3.10'",
    "networkx==3.4.0; python_version >= '3.10'",  # fixed circular import problem
]

## https://peps.python.org/pep-0621/#dependencies-optional-dependencies
#[project.optional-dependencies]
#valis = [
#    "valis-wsi",
#    "opencv-contrib-python",
#    "fastcluster",
#    "scikit-learn",
#]

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
dev = [
    { include-group = "test" },
    "platformdirs",
    "ipython",
    "mypy",
    "pdbpp",
    "pre-commit",
    "rich",
    "ruff",
]

[project.urls]
homepage = "https://github.com/vandeplaslab/image2image-reg"
repository = "https://github.com/vandeplaslab/image2image-reg"

# same as console_scripts entry point
[project.scripts]
i2reg = "image2image_reg.cli:main"
iwsireg = "image2image_reg.cli:main"

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 120
target-version = "py38"
src = ["src"]

# https://beta.ruff.rs/docs/rules/
[tool.ruff.lint]
extend-select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "I",    # isort
    "UP",    # pyupgrade
    # "S",    # bandit
    "C4",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
]
# I do this to get numpy-style docstrings AND retain
# D417 (Missing argument descriptions in the docstring)
# otherwise, see:
# https://beta.ruff.rs/docs/faq/#does-ruff-support-numpy-or-google-style-docstrings
# https://github.com/charliermarsh/ruff/issues/2606
extend-ignore = [
    "D100", # Missing docstring in public module
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D401", # First line should be in imperative mood
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]
"setup.py" = ["D"]

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = ["ignore"]


# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.run]
source = ["src"]
omit = [
    "**/*_version.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
]


# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_defs = false
disable_error_code = [
    "no-redef",
    "assignment",
    "variance"
]
show_error_codes = true
pretty = false
ignore_missing_imports = true
exclude = [
    "venv",
    "tests",
    "package",
    "build",
    "src/image2image_reg/_version.py",
]

# module specific overrides
[[tool.mypy.overrides]]
module = [
    "SimpleITK",
    "sitk",
    "itk"
]
ignore_errors = true


# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
    ".github_changelog_generator",
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "tests/**/*",
    ".idea/**/*",
    "_version.py",
    "Makefile",
    "MANIFEST.in",
]